add FunctionalTests