@@ -4,6 +4,7 @@ import com.critter.chronologer.pet.controllers.PetController;
 import com.critter.chronologer.pet.dao.entities.enms.PetType;
 import com.critter.chronologer.pet.dto.PetCreationRequest;
 import com.critter.chronologer.pet.dto.PetDTO;
+import com.critter.chronologer.schedule.dto.ScheduleCreationRequest;
 import com.critter.chronologer.user.customer.controllers.CustomerController;
 import com.critter.chronologer.user.customer.dto.CustomerCreationRequest;
 import com.critter.chronologer.user.employee.controllers.EmployeeController;
@@ -14,20 +15,18 @@ import com.critter.chronologer.user.employee.dto.FindEmployeesRequest;
 import com.google.common.collect.Sets;
 import com.critter.chronologer.schedule.controllers.ScheduleController;
 import com.critter.chronologer.schedule.dto.ScheduleDTO;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.web.server.LocalServerPort;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -63,22 +62,22 @@ public class CritterFunctionalTest {
 
     @Test
     public void testCreateEmployee(){
-        var request = getEmployeeCreationRequest(Collections.emptySet(), Set.of(EmployeeSkill.FEEDING, EmployeeSkill.PETTING));
+        var request = getEmployeeCreationRequest(Collections.emptySet(), Sets.newHashSet(EmployeeSkill.FEEDING, EmployeeSkill.PETTING));
         var newEmployee = employeeController.saveEmployee(request);
         var retrievedEmployee = employeeController.getEmployee(newEmployee.getId());
 
         assertEquals(request.skills(), newEmployee.getSkills());
         assertEquals(newEmployee.getId(), retrievedEmployee.getId());
-       assertTrue(retrievedEmployee.getId() > 0);
+        assertTrue(retrievedEmployee.getId() > 0);
     }
 
     @Test
     public void testAddPetsToCustomer() {
-        var customer = getCustomerCreationRequest();
-        var newCustomer = customerController.saveCustomer(customer);
+        var customerCreationRequest = getCustomerCreationRequest();
+        var newCustomer = customerController.saveCustomer(customerCreationRequest);
 
-        var petDTO = getPetCreationRequest(newCustomer.getId());
-        var newPet = petController.savePet(petDTO);
+        var petCreationRequest = getPetCreationRequest(newCustomer.getId());
+        var newPet = petController.savePet(petCreationRequest);
 
         //make sure pet contains customer id
         var retrievedPet = petController.getPet(newPet.getId());
@@ -98,8 +97,8 @@ public class CritterFunctionalTest {
 
     @Test
     public void testFindPetsByOwner() {
-        var customerDTO = getCustomerCreationRequest();
-        var newCustomer = customerController.saveCustomer(customerDTO);
+        var customerCreationRequest = getCustomerCreationRequest();
+        var newCustomer = customerController.saveCustomer(customerCreationRequest);
 
         var petCreationRequest = getPetCreationRequest(newCustomer.getId());
         PetDTO newPet1 = petController.savePet(petCreationRequest);
@@ -114,11 +113,11 @@ public class CritterFunctionalTest {
 
     @Test
     public void testFindOwnerByPet() {
-        var customerDTO = getCustomerCreationRequest();
-        var newCustomer = customerController.saveCustomer(customerDTO);
+        var customerCreationRequest = getCustomerCreationRequest();
+        var newCustomer = customerController.saveCustomer(customerCreationRequest);
 
-        var petDTO = getPetCreationRequest(newCustomer.getId());
-        PetDTO newPet = petController.savePet(petDTO);
+        var petCreationRequest = getPetCreationRequest(newCustomer.getId());
+        PetDTO newPet = petController.savePet(petCreationRequest);
 
         var owner = customerController.getOwnerByPet(newPet.getId());
         assertEquals(owner.getId(), newCustomer.getId());
@@ -127,8 +126,8 @@ public class CritterFunctionalTest {
 
     @Test
     public void testChangeEmployeeAvailability() {
-        var employeeDTO = getEmployeeCreationRequest(Collections.emptySet(), Set.of(EmployeeSkill.FEEDING, EmployeeSkill.PETTING));
-        var emp1 = employeeController.saveEmployee(employeeDTO);
+        var employeeCreationRequest = getEmployeeCreationRequest(Sets.newHashSet(), Sets.newHashSet(EmployeeSkill.FEEDING, EmployeeSkill.PETTING));
+        var emp1 = employeeController.saveEmployee(employeeCreationRequest);
         assertTrue(emp1.getDaysAvailable() != null && emp1.getDaysAvailable().isEmpty());
 
         Set<DayOfWeek> availability = Sets.newHashSet(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY);
@@ -140,99 +139,95 @@ public class CritterFunctionalTest {
 
     @Test
     public void testFindEmployeesByServiceAndTime() {
-        var emp1 = getEmployeeCreationRequest(Set.of(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY), Set.of(EmployeeSkill.FEEDING, EmployeeSkill.PETTING));
-        var emp2 = getEmployeeCreationRequest(Set.of(DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY), Set.of(EmployeeSkill.PETTING, EmployeeSkill.WALKING));
-        var emp3 = getEmployeeCreationRequest(Set.of(DayOfWeek.FRIDAY, DayOfWeek.SATURDAY, DayOfWeek.SUNDAY), Set.of(EmployeeSkill.WALKING, EmployeeSkill.SHAVING));
+        var emp1 = getEmployeeCreationRequest(Sets.newHashSet(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY), Sets.newHashSet(EmployeeSkill.FEEDING, EmployeeSkill.PETTING));
+        var emp2 = getEmployeeCreationRequest(Sets.newHashSet(DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY), Sets.newHashSet(EmployeeSkill.PETTING, EmployeeSkill.WALKING));
+        var emp3 = getEmployeeCreationRequest(Sets.newHashSet(DayOfWeek.FRIDAY, DayOfWeek.SATURDAY, DayOfWeek.SUNDAY), Sets.newHashSet(EmployeeSkill.WALKING, EmployeeSkill.SHAVING));
 
         var emp1n = employeeController.saveEmployee(emp1);
         var emp2n = employeeController.saveEmployee(emp2);
         var emp3n = employeeController.saveEmployee(emp3);
 
         //make a request that matches employee 1 or 2
-        FindEmployeesRequest findEmployeesRequest1 = new FindEmployeesRequest(Set.of(EmployeeSkill.PETTING), LocalDate.of(2019, 12, 25));
+        FindEmployeesRequest findEmployeesRequest1 = new FindEmployeesRequest(Sets.newHashSet(EmployeeSkill.PETTING), LocalDate.of(2019, 12, 25));
 
         Set<Long> eIds1 = employeeController.findEmployeesForService(findEmployeesRequest1).stream().map(EmployeeDTO::getId).collect(Collectors.toSet());
-        Set<Long> eIds1expected = Set.of(emp1n.getId(), emp2n.getId());
+        Set<Long> eIds1expected = Sets.newHashSet(emp1n.getId(), emp2n.getId());
         assertEquals(eIds1expected, eIds1);
 
         //make a request that matches only employee 3
-        FindEmployeesRequest findEmployeesRequest2 = new FindEmployeesRequest(Set.of(EmployeeSkill.WALKING, EmployeeSkill.SHAVING), LocalDate.of(2019, 12, 27));
+        FindEmployeesRequest findEmployeesRequest2 = new FindEmployeesRequest(Sets.newHashSet(EmployeeSkill.WALKING, EmployeeSkill.SHAVING), LocalDate.of(2019, 12, 27));
 
         Set<Long> eIds2 = employeeController.findEmployeesForService(findEmployeesRequest2).stream().map(EmployeeDTO::getId).collect(Collectors.toSet());
-        Set<Long> eIds2expected = Set.of(emp3n.getId());
+        Set<Long> eIds2expected = Sets.newHashSet(emp3n.getId());
         assertEquals(eIds2expected, eIds2);
     }
-//
-//    @Test
-//    public void testSchedulePetsForServiceWithEmployee() {
-//        EmployeeDTO employeeTemp = getEmployeeCreationRequest();
-//        employeeTemp.setDaysAvailable(Sets.newHashSet(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY));
-//        EmployeeDTO employeeDTO = userController.saveEmployee(employeeTemp);
-//        CustomerDTO customerDTO = userController.saveCustomer(getCustomerCreationRequest());
-//        PetDTO petTemp = getPetCreationRequest();
-//        petTemp.setOwnerId(customerDTO.getId());
-//        PetDTO petDTO = petController.savePet(petTemp);
-//
-//        LocalDate date = LocalDate.of(2019, 12, 25);
-//        List<Long> petList = Lists.newArrayList(petDTO.getId());
-//        List<Long> employeeList = Lists.newArrayList(employeeDTO.getId());
-//        Set<EmployeeSkill> skillSet =  Sets.newHashSet(EmployeeSkill.PETTING);
-//
-//        scheduleController.createSchedule(createScheduleDTO(petList, employeeList, date, skillSet));
-//        ScheduleDTO scheduleDTO = scheduleController.getAllSchedules().get(0);
-//
-//        Assertions.assertEquals(scheduleDTO.getActivities(), skillSet);
-//        Assertions.assertEquals(scheduleDTO.getDate(), date);
-//        Assertions.assertEquals(scheduleDTO.getEmployeeIds(), employeeList);
-//        Assertions.assertEquals(scheduleDTO.getPetIds(), petList);
-//    }
 
-//    @Test
-//    public void testFindScheduleByEntities() {
-//        ScheduleDTO sched1 = populateSchedule(1, 2, LocalDate.of(2019, 12, 25), Sets.newHashSet(EmployeeSkill.FEEDING, EmployeeSkill.WALKING));
-//        ScheduleDTO sched2 = populateSchedule(3, 1, LocalDate.of(2019, 12, 26), Sets.newHashSet(EmployeeSkill.PETTING));
-//
-//        //add a third schedule that shares some employees and pets with the other schedules
-//        ScheduleDTO sched3 = new ScheduleDTO();
-//        sched3.setEmployeeIds(sched1.getEmployeeIds());
-//        sched3.setPetIds(sched2.getPetIds());
-//        sched3.setActivities(Sets.newHashSet(EmployeeSkill.SHAVING, EmployeeSkill.PETTING));
-//        sched3.setDate(LocalDate.of(2020, 3, 23));
-//        scheduleController.createSchedule(sched3);
-//
-//        /*
-//            We now have 3 schedule entries. The third schedule entry has the same employees as the 1st schedule
-//            and the same pets/owners as the second schedule. So if we look up schedule entries for the employee from
-//            schedule 1, we should get both the first and third schedule as our result.
-//         */
-//
-//        //Employee 1 in is both schedule 1 and 3
-//        List<ScheduleDTO> scheds1e = scheduleController.getScheduleForEmployee(sched1.getEmployeeIds().get(0));
-//        compareSchedules(sched1, scheds1e.get(0));
-//        compareSchedules(sched3, scheds1e.get(1));
-//
-//        //Employee 2 is only in schedule 2
-//        List<ScheduleDTO> scheds2e = scheduleController.getScheduleForEmployee(sched2.getEmployeeIds().get(0));
-//        compareSchedules(sched2, scheds2e.get(0));
-//
-//        //Pet 1 is only in schedule 1
-//        List<ScheduleDTO> scheds1p = scheduleController.getScheduleForPet(sched1.getPetIds().get(0));
-//        compareSchedules(sched1, scheds1p.get(0));
-//
-//        //Pet from schedule 2 is in both schedules 2 and 3
-//        List<ScheduleDTO> scheds2p = scheduleController.getScheduleForPet(sched2.getPetIds().get(0));
-//        compareSchedules(sched2, scheds2p.get(0));
-//        compareSchedules(sched3, scheds2p.get(1));
-//
-//        //Owner of the first pet will only be in schedule 1
-//        List<ScheduleDTO> scheds1c = scheduleController.getScheduleForCustomer(userController.getOwnerByPet(sched1.getPetIds().get(0)).getId());
-//        compareSchedules(sched1, scheds1c.get(0));
-//
-//        //Owner of pet from schedule 2 will be in both schedules 2 and 3
-//        List<ScheduleDTO> scheds2c = scheduleController.getScheduleForCustomer(userController.getOwnerByPet(sched2.getPetIds().get(0)).getId());
-//        compareSchedules(sched2, scheds2c.get(0));
-//        compareSchedules(sched3, scheds2c.get(1));
-//    }
+    @Test
+    public void testSchedulePetsForServiceWithEmployee() {
+        var employeeCreationRequest = getEmployeeCreationRequest(Sets.newHashSet(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY), Collections.emptySet());
+
+        EmployeeDTO employee = employeeController.saveEmployee(employeeCreationRequest);
+        var customer = customerController.saveCustomer(getCustomerCreationRequest());
+        var petCreationRequest = getPetCreationRequest(customer.getId());
+        PetDTO pet = petController.savePet(petCreationRequest);
+
+        LocalDate date = LocalDate.of(2019, 12, 25);
+        List<Long> petsList = List.of(pet.getId());
+        List<Long> employeesList = List.of(employee.getId());
+        Set<EmployeeSkill> skillsSet = Sets.newHashSet(EmployeeSkill.PETTING);
+
+        scheduleController.createSchedule(getScheduleCreationRequest(petsList, employeesList, date, skillsSet));
+        ScheduleDTO schedule = scheduleController.getAllSchedules().get(0);
+
+        assertEquals(schedule.getActivities(), skillsSet);
+        assertEquals(schedule.getDate(), date);
+        assertEquals(schedule.getEmployeeIds(), employeesList);
+        assertEquals(schedule.getPetIds(), petsList);
+    }
+
+    @Test
+    public void testFindScheduleByEntities() {
+        ScheduleDTO schedule1 = populateSchedule(1, 2, LocalDate.of(2019, 12, 25), Sets.newHashSet(EmployeeSkill.FEEDING, EmployeeSkill.WALKING));
+        ScheduleDTO schedule2 = populateSchedule(3, 1, LocalDate.of(2019, 12, 26), Sets.newHashSet(EmployeeSkill.PETTING));
+
+        //add a third schedule that shares some employees and pets with the other schedules
+        var scheduleCreationRequest = new ScheduleCreationRequest(schedule1.getEmployeeIds(), schedule2.getPetIds(), LocalDate.of(2020, 3, 23), Sets.newHashSet(EmployeeSkill.SHAVING, EmployeeSkill.PETTING));
+
+        ScheduleDTO schedule3 = scheduleController.createSchedule(scheduleCreationRequest);
+
+        /*
+            We now have 3 schedule entries. The third schedule entry has the same employees as the 1st schedule
+            and the same pets/owners as the second schedule. So if we look up schedule entries for the employee from
+            schedule 1, we should get both the first and third schedule as our result.
+         */
+
+        //Employee 1 in is both schedule 1 and 3
+        List<ScheduleDTO> scheds1e = scheduleController.getScheduleForEmployee(schedule1.getEmployeeIds().get(0));
+        compareSchedules(schedule1, scheds1e.get(0));
+        compareSchedules(schedule3, scheds1e.get(1));
+
+        //Employee 2 is only in schedule 2
+        List<ScheduleDTO> scheds2e = scheduleController.getScheduleForEmployee(schedule2.getEmployeeIds().get(0));
+        compareSchedules(schedule2, scheds2e.get(0));
+
+        //Pet 1 is only in schedule 1
+        List<ScheduleDTO> scheds1p = scheduleController.getScheduleForPet(schedule1.getPetIds().get(0));
+        compareSchedules(schedule1, scheds1p.get(0));
+
+        //Pet from schedule 2 is in both schedules 2 and 3
+        List<ScheduleDTO> scheds2p = scheduleController.getScheduleForPet(schedule2.getPetIds().get(0));
+        compareSchedules(schedule2, scheds2p.get(0));
+        compareSchedules(schedule3, scheds2p.get(1));
+
+        //Owner of the first pet will only be in schedule 1
+        List<ScheduleDTO> scheds1c = scheduleController.getScheduleForCustomer(customerController.getOwnerByPet(schedule1.getPetIds().get(0)).getId());
+        compareSchedules(schedule1, scheds1c.get(0));
+
+        //Owner of pet from schedule 2 will be in both schedules 2 and 3
+        List<ScheduleDTO> scheds2c = scheduleController.getScheduleForCustomer(customerController.getOwnerByPet(schedule2.getPetIds().get(0)).getId());
+        compareSchedules(schedule2, scheds2c.get(0));
+        compareSchedules(schedule3, scheds2c.get(1));
+    }
 
 
     private static EmployeeCreationRequest getEmployeeCreationRequest(Set<DayOfWeek> daysAvailable, Set<EmployeeSkill> skills) {
@@ -248,37 +243,30 @@ public class CritterFunctionalTest {
                                       LocalDate.of(2019, 10, 1), "note");
     }
 
-    private static FindEmployeesRequest createEmployeeRequestDTO() {
+    private static FindEmployeesRequest getFindEmployeesRequest() {
         return new FindEmployeesRequest(Sets.newHashSet(EmployeeSkill.FEEDING, EmployeeSkill.WALKING),
                                         LocalDate.of(2019, 12, 25));
     }
 
-//    private static ScheduleDTO createScheduleDTO(List<Long> petIds, List<Long> employeeIds, LocalDate date, Set<EmployeeSkill> activities) {
-//        ScheduleDTO scheduleDTO = new ScheduleDTO();
-//        scheduleDTO.setPetIds(petIds);
-//        scheduleDTO.setEmployeeIds(employeeIds);
-//        scheduleDTO.setDate(date);
-//        scheduleDTO.setActivities(activities);
-//        return scheduleDTO;
-//    }
+    private static ScheduleCreationRequest getScheduleCreationRequest(List<Long> petIds, List<Long> employeeIds, LocalDate date, Set<EmployeeSkill> activities) {
+        return new ScheduleCreationRequest(employeeIds, petIds, date, activities);
+    }
 
-//    private ScheduleDTO populateSchedule(int numEmployees, int numPets, LocalDate date, Set<EmployeeSkill> activities) {
-//        List<Long> employeeIds = IntStream.range(0, numEmployees)
-//                .mapToObj(i -> getEmployeeCreationRequest())
-//                .map(e -> {
-//                    e.setSkills(activities);
-//                    e.setDaysAvailable(Sets.newHashSet(date.getDayOfWeek()));
-//                    return userController.saveEmployee(e).getId();
-//                }).collect(Collectors.toList());
-//        CustomerDTO cust = userController.saveCustomer(getCustomerCreationRequest());
-//        List<Long> petIds = IntStream.range(0, numPets)
-//                .mapToObj(i -> getPetCreationRequest())
-//                .map(p -> {
-//                    p.setOwnerId(cust.getId());
-//                    return petController.savePet(p).getId();
-//                }).collect(Collectors.toList());
-//        return scheduleController.createSchedule(createScheduleDTO(petIds, employeeIds, date, activities));
-//    }
+    private ScheduleDTO populateSchedule(int numEmployees, int numPets, LocalDate date, Set<EmployeeSkill> activities) {
+        List<Long> employeeIds = IntStream.range(0, numEmployees)
+                .mapToObj(i -> getEmployeeCreationRequest(Sets.newHashSet(date.getDayOfWeek()), activities))
+                .map(e -> employeeController.saveEmployee(e).getId())
+                .toList();
+
+        var customer = customerController.saveCustomer(getCustomerCreationRequest());
+
+        List<Long> petIds = IntStream.range(0, numPets)
+                .mapToObj(i -> getPetCreationRequest(customer.getId()))
+                .map(p -> petController.savePet(p).getId())
+                .toList();
+
+        return scheduleController.createSchedule(getScheduleCreationRequest(petIds, employeeIds, date, activities));
+    }
 
     private static void compareSchedules(ScheduleDTO sched1, ScheduleDTO sched2) {
         assertEquals(sched1.getPetIds(), sched2.getPetIds());
@@ -286,5 +274,4 @@ public class CritterFunctionalTest {
         assertEquals(sched1.getEmployeeIds(), sched2.getEmployeeIds());
         assertEquals(sched1.getDate(), sched2.getDate());
     }
-
 }
